# toggl-api

./: .gitignore  LICENSE  README.md  default.nix  shell.nix  stack.yaml  toggl-api.cabal
src/Toggl/: Fetch.hs  Main.hs  Types.hs
util/: FetchDetails.hs  UpdateDetails.hs  example-usage.sh
